# Byte_Robot_Dog

./: .gitignore  99-byte-robot-dog.rules  CLAUDE.md  Dockerfile  HIP_PITCH_DEBUG.md  JETSON_QUICKSTART.md  docker-compose.yml  joy_drive.py  joy_drive.service  joy_drive_updated.py  joy_knee_test.py  joy_new_leg.py  small_walk.py  tune.py
ros2_ws/: diagnose_node5.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/byte_leg_bringup/share/byte_leg_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/byte_leg_bringup/share/byte_leg_bringup/launch/: real.launch.py  sim.launch.py
ros2_ws/install/byte_leg_control/lib/byte_leg_control/: ik_node  joy_teleop
ros2_ws/install/byte_leg_control/share/byte_leg_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/byte_leg_control/share/byte_leg_control/config/: controllers.yaml  teleop.yaml
ros2_ws/install/byte_leg_description/share/byte_leg_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/byte_leg_description/share/byte_leg_description/cmake/: byte_leg_descriptionConfig-version.cmake  byte_leg_descriptionConfig.cmake
ros2_ws/install/byte_leg_description/share/byte_leg_description/environment/: ament_prefix_path.dsv  path.dsv
ros2_ws/install/byte_leg_description/share/byte_leg_description/urdf/: leg.urdf.xacro
ros2_ws/install/byte_leg_gazebo/share/byte_leg_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/byte_leg_gazebo/share/byte_leg_gazebo/cmake/: byte_leg_gazeboConfig-version.cmake  byte_leg_gazeboConfig.cmake
ros2_ws/install/byte_leg_gazebo/share/byte_leg_gazebo/config/: bridge.yaml
ros2_ws/install/byte_leg_gazebo/share/byte_leg_gazebo/environment/: ament_prefix_path.dsv  path.dsv
ros2_ws/install/byte_leg_gazebo/share/byte_leg_gazebo/worlds/: bench.sdf
ros2_ws/install/byte_leg_hardware/lib/byte_leg_hardware/: can_relay
ros2_ws/install/byte_leg_hardware/share/byte_leg_hardware/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/byte_leg_hardware/share/byte_leg_hardware/config/: hardware.yaml
ros2_ws/log/: latest_build  latest_test
ros2_ws/src/byte_leg_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/byte_leg_bringup/launch/: real.launch.py
ros2_ws/src/byte_leg_control/: setup.cfg  setup.py
ros2_ws/src/byte_leg_control/byte_leg_control/: joy_per_joint.py  joy_teleop.py
ros2_ws/src/byte_leg_control/config/: controllers.yaml  teleop.yaml
ros2_ws/src/byte_leg_control/test/: test_ik.py
ros2_ws/src/byte_leg_description/: CMakeLists.txt
ros2_ws/src/byte_leg_description/urdf/: leg.urdf.xacro
ros2_ws/src/byte_leg_gazebo/: CMakeLists.txt
ros2_ws/src/byte_leg_gazebo/config/: bridge.yaml
ros2_ws/src/byte_leg_gazebo/worlds/: bench.sdf
ros2_ws/src/byte_leg_hardware/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/byte_leg_hardware/byte_leg_hardware/: can_relay.py  can_waveshare.py  f710_usb_joy.py
ros2_ws/src/byte_leg_hardware/config/: hardware.yaml
ros2_ws/src/byte_leg_hardware/test/: test_can_waveshare.py
(+4 files in other folders)
