<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>byte_leg_bringup</name>
  <version>0.1.0</version>
  <description>Top-level launch for the byte_leg Gazebo simulation.</description>
  <maintainer email="loicfinette@gmail.com">Loic Finette</maintainer>
  <license>MIT</license>

  <exec_depend>byte_leg_description</exec_depend>
  <exec_depend>byte_leg_control</exec_depend>
  <exec_depend>byte_leg_gazebo</exec_depend>
  <exec_depend>byte_leg_hardware</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
